# readiPDSDisk

./: Makefile.in  README.md  configure  configure.in  readiPDSDisk.c
autom4te.cache/: output.0  requests  traces.0
